--- a/package.json
+++ b/package.json
@@ -4,12 +4,22 @@
   "description": "creates bundleconfig.json",
   "main": "gulpfile.js",
   "dependencies": {
+    "csslint-stylish": "0.0.6",
     "gulp": "^3.9.1",
-    "gulp-file": "^0.4.0",
+    "gulp-csslint": "^1.0.1",
     "gulp-debug": "^3.2.0",
-    "gulp-util": "^3.0.8",
+    "gulp-file": "^0.4.0",
     "gulp-filter": "^5.1.0",
+    "gulp-if-else": "^1.0.3",
+    "gulp-jshint": "^2.1.0",
+    "gulp-jslint": "^1.0.10",
+    "gulp-stylelint": "^7.0.0",
+    "gulp-util": "^3.0.8",
+    "jshint": "^2.9.5",
+    "jshint-stylish": "^2.2.1",
     "named-regexp-groups": "^1.0.2",
+    "stylelint": "^9.2.0",
+    "stylelint-config-standard": "^18.2.0",
     "through2": "^2.0.3",
     "xmldom": "^0.1.27",
     "xpath": "^0.0.27"
